--- a/001 Family.html
+++ b/001 Family.html
@@ -23,7 +23,7 @@
 			<h1>FAMILY ROOM</h1>
 				
 				<div class="image">
-				<img src="Img/001Family.JPG" height="300" width="500" alt="Image unavailable">
+				<img src="Img/001Family.jpg" height="300" width="500" alt="Image unavailable">
 				</div>
 
 				<div class="scrollover">
