--- a/002 Bedroom.html
+++ b/002 Bedroom.html
@@ -23,7 +23,7 @@
 			<h1>BEDROOM</h1>
 				
 				<div class="image">
-				<img src="Img/002Bedroom.JPEG" height="300" width="500" alt="Image unavailable">
+				<img src="Img/002Bedroom.jpeg" height="300" width="500" alt="Image unavailable">
 				</div>
 
 				<div class="scrollover">
