--- a/003 Dining.html
+++ b/003 Dining.html
@@ -23,7 +23,7 @@
 			<h1>DINING ROOM</h1>
 
 				<div class="image">
-				<img src="Img/003Dining.JFIF" height="300" width="500" alt="Image unavailable">
+				<img src="Img/003Dining.jfif" height="300" width="500" alt="Image unavailable">
 				</div>
 
 				<div class="scrollover">
