--- a/004 Kitchen.html
+++ b/004 Kitchen.html
@@ -23,7 +23,7 @@
 			<h1>KITCHEN</h1>
 
 				<div class="image">
-				<img src="Img/004Kitchen.JPG" height="300" width="500" alt="Image unavailable">
+				<img src="Img/004Kitchen.jpg" height="300" width="500" alt="Image unavailable">
 				</div>
 
 				<div class="scrollover">
