--- a/005 Bathroom.html
+++ b/005 Bathroom.html
@@ -23,7 +23,7 @@
 			<h1>BATHROOM</h1>
 
 				<div class="image">
-				<img src="Img/005Bathroom.JPG" height="300" width="500" alt="Image unavailable">
+				<img src="Img/005Bathroom.jpg" height="300" width="500" alt="Image unavailable">
 				</div>
 		
 				<div class="scrollover">
