--- a/006 Terrace.html
+++ b/006 Terrace.html
@@ -23,7 +23,7 @@
 			<h1>TERRACE</h1>
 
 				<div class="image">
-				<img src="Img/006Terrace.JPG" height="300" width="500" alt="Image unavailable">
+				<img src="Img/006Terrace.jpg" height="300" width="500" alt="Image unavailable">
 				</div>
 		
 				<div class="scrollover">
