--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div class="navbar">
 			<img src="Img/001logo.png" class="logo">
 			<ul>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Gallery</a></li>
+				<li><a href="index.html">About Us</a></li>
+				<li><a href="index.html">Gallery</a></li>
 				<li><a href="007 Contact.html">Contact Us</a></li>
 			</ul>
 		</div>
